--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,4 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pg_data:/var/lib/postgresql/data
-
-volumes:
-  pg_data:
+      - ./db:/var/lib/postgresql/data
