--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ defusedxml==0.7.1
 Django==4.2.7
 django-allauth==0.58.1
 django-jazzmin==2.6.0
+django-mdeditor==0.1.20
+django-nested-inline==0.4.6
 idna==3.4
 oauthlib==3.2.2
 Pillow==10.1.0
@@ -20,5 +22,3 @@ requests-oauthlib==1.3.1
 sqlparse==0.4.4
 tzdata==2023.3
 urllib3==2.0.7
-
-django-nested-inline~=0.4.6
